--- a/index.html
+++ b/index.html
@@ -1,16 +1,232 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Wild Review</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+
+  <title>Wild Review</title>
+
 </head>
-<body>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<body class="bg-dark">
+  <header class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Wild Review</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Critiques
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
+              <a class="dropdown-item" href="#">Films</a>
+              <a class="dropdown-item" href="#">Séries</a>
+              <a class="dropdown-item" href="#">Dessins animés</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Dossiers
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
+              <a class="dropdown-item" href="#">Interviews</a>
+              <a class="dropdown-item" href="#">Retrospectives</a>
+              <a class="dropdown-item" href="#">Dessins animés</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">A propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  <div class="container-fluid">
+    <div class="slider">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <section class="container">
+    <div class="row">
+      <div class="col-xs-12 col-lg-9">
+        <h2>Derniers articles</h2>
+        <div class="row">
+          <article class="bg-light col-xs-12 col-lg-6 ">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+          <article class="bg-light col-xs-12 col-lg-6">
+            <header>
+              <h3>Titre de l'article</h3>
+            </header>
+            <section>
+              <img class="w-100" src="https://via.placeholder.com/200x200">
+              <p>Lorem ipsum etc</p>
+            </section>
+            <footer>
+              <p>Date/Tags/Auteur</p>
+            </footer>
+          </article>
+        </div>
+      </div>
+      <aside class="col-xs-12 col-lg-3 bg-secondary">
+        <div id="social">
+
+        </div>
+        <div id="newsletter">
+          <div class="form-group">
+            <label for="mailNews">Abonnez-vous à notre newsletter</label>
+            <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
+          </div>
+        </div>
+        <div id="boxoffice">
+
+        </div>
+        <div id="coeur">
+
+        </div>
+      </aside>
+    </div>
+  </section>
+  <footer class="container-fluid mx-auto bg-light">
+    <div class="row">
+      <nav class="nav flex-column col-xs-12 col-md-4 col-offset-md-1">
+        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#">A propos</a>
+        <a class="nav-link" href="#">Mentions légales</a>
+      </nav>
+      <div class="col-xs-12 col-md-4">
+        <img alt="" src="https://via.placeholder.com/200x200">
+      </div>
+      <nav class="nav flex-column col-xs-12 col-md-4">
+        <span></span>
+        <a class="nav-link" href="#">Les Inrocks</a>
+        <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
+        <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
+        <a class="nav-link" href="#">Cinémas UGC</a>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
