--- a/index.html
+++ b/index.html
@@ -145,14 +145,15 @@
     </section>
 
     <aside class="d-none d-sm-block bg-secondary">
-      <div id="social"> </div>
-      <div id="newsletter">
-        <div class="form-group">
-          <label for="mailNews">Abonnez-vous à notre newsletter</label>
-          <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
+      <div id="social">
+        <div id="newsletter">
+          <div class="form-group">
+            <label for="mailNews">Abonnez-vous à notre newsletter</label>
+            <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
+          </div>
         </div>
       </div>
-      <div id="boxoffice"></div>
+      <div id="boxoffice">
         <p>Box Office</p>
         <hr>
         <ol>
@@ -162,7 +163,14 @@
           <li class="filmsBoxOffice">Mission Impossible : Fallout  - 100 456</li>
           <li class="filmsBoxOffice">Les vieux fourneaux</li>
         </ol>
-      <div id="coeur"></div>
+      </div>
+      <div id="coeur">
+        <p>Coup de coeur de la semaine</p>
+        <hr>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/pW312ecWZtY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
     </aside>
     </section>
 
