--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Police -->
+  <style>@import url('https://fonts.googleapis.com/css?family=Nunito');</style>
+
   <title>Wild Review</title>
 
 </head>
@@ -199,23 +204,42 @@
       </aside>
     </div>
   </section>
-  <footer class="container-fluid mx-auto bg-light">
-    <div class="row">
-      <nav class="nav flex-column col-xs-12 col-md-4 col-offset-md-1">
-        <a class="nav-link" href="#">Contact</a>
-        <a class="nav-link" href="#">A propos</a>
-        <a class="nav-link" href="#">Mentions légales</a>
-      </nav>
-      <div class="col-xs-12 col-md-4">
-        <img alt="" src="https://via.placeholder.com/200x200">
+
+  <!-- Footer -->
+
+  <footer>
+    <div class="container-fluid">
+      <div class="row justify-content-between">
+        <div class="col-xs-12 col-sm-3">
+          <nav class="nav d-flex flex-column">
+            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">A propos</a>
+            <a class="nav-link" href="#">Mentions légales</a>
+          </nav>
+        </div>
+        <div class="col-xs-12 col-sm-6 text-center">
+          <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
+          <div>
+            <nav class="d-flex flex-row justify-content-center mt-1">
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/facebook.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/twitter.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+            </nav>
+          </div>
+          <div>
+            <p class="d-flex justify-content-center mt-1">© All Rights Reserved</p>
+          </div>
+        </div>
+        <div class="d-none d-sm-block col-sm-3">
+          <nav class="nav d-flex flex-column">
+            <a class="nav-link" href="#">Les Inrocks</a>
+            <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
+            <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
+            <a class="nav-link" href="#">Cinémas UGC</a>
+          </nav>
+        </div>
       </div>
-      <nav class="nav flex-column col-xs-12 col-md-4">
-        <span></span>
-        <a class="nav-link" href="#">Les Inrocks</a>
-        <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
-        <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
-        <a class="nav-link" href="#">Cinémas UGC</a>
-      </nav>
     </div>
   </footer>
 
