--- a/index.html
+++ b/index.html
@@ -20,53 +20,63 @@
 
 <body class="bg-white">
   <header class="container-expand-lg">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Wild Review</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="row">
+      <div class="col-xs-12 col-lg-12">
+          <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+              <a class="navbar-brand" href="#"><img src="images/wild-review.png"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Critiques
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
-              <a class="dropdown-item" href="#">Films</a>
-              <a class="dropdown-item" href="#">Séries</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Dossiers
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
-              <a class="dropdown-item" href="#">Interviews</a>
-              <a class="dropdown-item" href="#">Retrospectives</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">A propos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active px-4">
+                          <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item dropdown px-4">
+                          <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button"
+                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Critiques
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
+                              <a class="dropdown-item" href="#">Films</a>
+                              <a class="dropdown-item" href="#">Séries</a>
+                              <a class="dropdown-item" href="#">Dessins animés</a>
+                          </div>
+                      </li>
+                      <li class="nav-item dropdown  px-4">
+                          <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button"
+                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Dossiers
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
+                              <a class="dropdown-item" href="#">Interviews</a>
+                              <a class="dropdown-item" href="#">Retrospectives</a>
+                              <a class="dropdown-item" href="#">Dessins animés</a>
+                          </div>
+                      </li>
+                      <li class="nav-item px-4">
+                          <a class="nav-link" href="#">A propos</a>
+                      </li>
+                      <li class="nav-item px-4">
+                          <a class="nav-link" href="#">Contact</a>
+                      </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                      <div class="input-group">
+                          <input type="search" class="form-control" placeholder="Search" aria-label="Search"
+                              aria-describedby="button-addon2">
+                          <div class="input-group-append">
+                              <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img
+                                      src="images/magnify-white.png"></button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
+          </nav>
       </div>
-    </nav>
+  </div>
 
     <!-- Carousel CSS -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
