--- a/index.html
+++ b/index.html
@@ -80,116 +80,178 @@
 
     <!-- Carousel CSS -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="First slide">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Third slide">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
     </div>
 
   </header>
   <section class="main-page">
-    <section class="container-fluid">
+    <section class="container-fluid containerContent">
       <article class="row">
-        <div class="card-deck mx-auto w-75">
-          <div class="card">
-            <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+        <header class="col-10 offset-1 mt-5 mb-3">
+          <h2>Derniers articles</h2>
+          <hr>
+        </header>
+          <div class="card-deck mx-auto w-75">
+              <div class="card">
+                <img class="card-img-top" src="https://m.media-amazon.com/images/M/MV5BMjRjZjE3OGUtYzIyYy00NGRkLTliYTUtYmI1ZjQ3YmZjYTZiXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SY1000_SX656_AL_.jpg" alt="Night of the Living Dead image">
+                <div class="card-img-overlay w-75">
+                  <div class="textContainer">
+                    <p class="card-text">There is panic throughout the nation as the dead suddenly come back to life. The film follows a group of characters who barricade themselves in an old farmhouse in an attempt to remain safe from these bloodthirsty, flesh-eating monsters. </p>
+                  </div> 
+                </div>
+                <div class="card-body bg-light">
+                  <h5 class="card-title">Night of the Living Dead (1968)</h5>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted"> horror / pubished yesterday, 4:40pm / Autor Name</small>
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+                <div class="card-body bg-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+              </div>
+              <div class="card-deck mx-auto w-75">
+              <div class="card">
+                <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+                <div class="card-body bg-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+              <div class="card">
+                  <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+                  <div class="card-body bg-light">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+              </div>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <div class="card-deck mx-auto w-75">
+            <div class="card">
+              <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+              <div class="card-body bg-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
             </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
+            <div class="card">
+                <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+                <div class="card-body bg-light">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
             </div>
           </div>
         </div>
         <div class="card-deck mx-auto w-75">
           <div class="card">
             <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-light">
               <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">Last updated 3 mins ago</small>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+              <img class="card-img-top" src="https://via.placeholder.com/400x400" alt="Card image cap">
+              <div class="card-body bg-light">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
           </div>
-        </div>
+      </div>
       </article>
+      <div class="text-center">
+        <button type="button" class="btn btn-light border-ligth">Articles plus anciens</button>
+      </div>
+    
     </section>
 
-    <aside class="d-none d-sm-block bg-secondary">
-      <div id="social">
-        <div id="newsletter">
-          <div class="form-group">
-            <label for="mailNews">Abonnez-vous à notre newsletter</label>
+    <aside class="d-none d-sm-block bg-secondary px-3">
+      <div class="social d-flex justify-content-between">
+        <img class= "img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
+        <img class= "img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
+        <img class= "img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
+        <img class= "img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
+      </div>
+      <div id="newsletter">
+        <div class="card form-group">
+          <div class="card-header">
+            Abonnez-vous à notre newsletter
+          </div>
+          <div class="card-body">
             <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
           </div>
         </div>
       </div>
-      <div id="boxoffice">
+
+      <div class="mt-5" id="boxoffice">
         <p>Box Office</p>
         <hr>
         <ol>
           <li class="filmsBoxOffice">Film random - 230 456</li>
           <li class="filmsBoxOffice">Un autre film - 165 432</li>
           <li class="filmsBoxOffice">Encore un - 120 456</li>
-          <li class="filmsBoxOffice">Mission Impossible : Fallout - 100 456</li>
+          <li class="filmsBoxOffice">Mission Impossible : Fallout  - 100 456</li>
           <li class="filmsBoxOffice">Les vieux fourneaux</li>
         </ol>
       </div>
-      <div id="coeur">
+      <div class="mt-5" id="coeur">
         <p>Coup de coeur de la semaine</p>
         <hr>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/pW312ecWZtY" frameborder="0" allow="autoplay; encrypted-media"
-            allowfullscreen></iframe>
+        <div class="text-center">
+        <div id="player"></div>
         </div>
       </div>
     </aside>
-  </section>
+    </section>
 
   <!-- Footer -->
 
@@ -231,12 +293,69 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-</body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
+
+<!--API Youtube-->
+<script>
+  // 2. This code loads the IFrame Player API code asynchronously.
+  var tag = document.createElement('script');
+
+  tag.src = "https://www.youtube.com/iframe_api";
+  var firstScriptTag = document.getElementsByTagName('script')[0];
+  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+  // 3. This function creates an <iframe> (and YouTube player)
+  //    after the API code downloads.
+  var player;
+  function onYouTubeIframeAPIReady() {
+    player = new YT.Player('player', {
+      width: "100%",
+      height: "100%",
+      videoId: 'OV_unfdZYP4',
+      events: {
+        //'onReady': onPlayerReady,
+        'onStateChange': onPlayerStateChange,
+      }
+    });
+  }
+
+  // 4. The API will call this function when the video player is ready.
+  function onPlayerReady(event) {
+    event.target.playVideo();
+  }
+
+  // 5. The API calls this function when the player's state changes.
+  //    The function indicates that when playing a video (state=1),
+  //    the player should play for six seconds and then stop.
+  var done = false;
+  function onPlayerStateChange(event) {
+    if (event.data == YT.PlayerState.PLAYING && !done) {
+      //setTimeout(stopVideo, 6000);
+      done = true;
+    }
+  }
+  function stopVideo() {
+    player.stopVideo();
+  }
+
+
+const containers = document.querySelectorAll('.textContainer');
+Array.prototype.forEach.call(containers, (container) => {  // Loop through each container
+    var p = container.querySelector('p');
+    var divh = container.clientHeight;
+    while (p.offsetHeight > divh) { // Check if the paragraph's height is taller than the container's height. If it is:
+        p.textContent = p.textContent.replace(/\W*\s(\S)*$/, '(...)'); // add an ellipsis at the last shown space
+    }
+})
+
+</script>
+
+
+  </body>
 
 </html>
