page contact rajout navbar et footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Wild Review</title>
 
 </head>
-
+<!--TODO: Supprimer le débordement de marge -->
 <body class="bg-white">
   <header class="container-expand-lg">
     <div class="row">
