--- a/article.html
+++ b/article.html
@@ -177,37 +177,65 @@
             </div>
           </div>
       </article>
+      <aside class="d-block d-sm-block d-md-none col-12 bg-secondary">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 text-center mx-4 mt-4">
+                <p class="col-xs-12 text-left">A propos de l'auteur</p>
+                <hr />
+                <img alt="text" class="rounded-circle img-fluid text-center" src="http://via.placeholder.com/130x130">
+                <p class="mt-3 titreArticle">Michel Vaillant</p>
+                <small class="mt-3">Rédacteur en chef</small>
+                <p class="presentationAuteur text-justify mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis,
+                  sapien dui mattis dui, non pulvinar lorem felis nec erat</p>
+              </div>
+        </aside>
     </section>
 
-    <aside class="d-none d-sm-block bg-secondary">
-      <div id="social">
-        <div id="newsletter">
-          <div class="form-group">
-            <label for="mailNews">Abonnez-vous à notre newsletter</label>
-            <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
+    <aside class="d-none d-sm-none d-md-block bg-secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 text-center mx-4 mt-4">
+            <p class="col-xs-12 text-left">A propos de l'auteur</p>
+            <hr />
+            <img alt="text" class="rounded-circle img-fluid text-center" src="http://via.placeholder.com/130x130">
+            <p class="mt-3 titreArticle">Michel Vaillant</p>
+            <small class="mt-3">Rédacteur en chef</small>
+            <p class="presentationAuteur text-justify mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis,
+              sapien dui mattis dui, non pulvinar lorem felis nec erat</p>
+          </div>
+          <div class="d-none d-sm-block mx-4 mt-4">
+            <p>Du même auteur</p>
+            <hr />
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+          </div>
+          <div class="d-none d-sm-block mx-4 mt-4">
+            <p>Articles similaires</p>
+            <hr />
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
           </div>
         </div>
       </div>
-      <div id="boxoffice">
-        <p>Box Office</p>
-        <hr>
-        <ol>
-          <li class="filmsBoxOffice">Film random - 230 456</li>
-          <li class="filmsBoxOffice">Un autre film - 165 432</li>
-          <li class="filmsBoxOffice">Encore un - 120 456</li>
-          <li class="filmsBoxOffice">Mission Impossible : Fallout - 100 456</li>
-          <li class="filmsBoxOffice">Les vieux fourneaux</li>
-        </ol>
-      </div>
-      <div id="coeur">
-        <p>Coup de coeur de la semaine</p>
-        <hr>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/pW312ecWZtY" frameborder="0" allow="autoplay; encrypted-media"
-            allowfullscreen></iframe>
-        </div>
-      </div>
     </aside>
+
   </section>
 
   <!-- Footer -->
