--- a/article.html
+++ b/article.html
@@ -22,7 +22,7 @@
   <header class="container-expand-lg">
     <div class="row">
       <div class="col-xs-12 col-lg-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="#"><img src="images/wild-review.png"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
