--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="bg-white">
   <header class="container-expand-lg">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img src="images/wild-review.png"></a>
+      <a class="navbar-brand pl-4" href="#"><img src="images/wild-review.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <div class="input-group">
+          <div class="input-group pr-4">
             <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
