commit Nelson, marging footer et social

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
 
   </header>
+
   <section class="main-page">
     <section class="container-fluid containerContent">
       <article class="row">
@@ -221,31 +222,31 @@
           </div>
         </div>
       </article>
-      <div class="text-center">
+      <div class="text-center buttonMoreArticle">
         <button type="button" class="btn btn-light border-ligth">Articles plus anciens</button>
       </div>
 
     </section>
 
-    <aside class="d-none d-sm-block bg-secondary px-3">
+    <aside class="d-none d-sm-block bg-secondary">
+      <div id="newsletter" class="pb-3 bg-dark">
       <div class="social d-flex justify-content-between">
         <img class="img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
         <img class="img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
         <img class="img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
         <img class="img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
       </div>
-      <div id="newsletter">
-        <div class="card form-group">
-          <div class="card-header">
+        <div class="card form-group mx-3">
+          <div class="card-header headerNews">
             Abonnez-vous à notre newsletter
           </div>
-          <div class="card-body">
+          <div class="card-body bodyNews">
             <input type="email" class="form-control" id="mailNews" placeholder="Votre email">
           </div>
         </div>
       </div>
 
-      <div class="mt-5" id="boxoffice">
+      <div class="mt-5 px-3" id="boxoffice">
         <p>Box Office</p>
         <hr>
         <ol>
@@ -256,7 +257,7 @@
           <li class="filmsBoxOffice">Les vieux fourneaux</li>
         </ol>
       </div>
-      <div class="mt-5" id="coeur">
+      <div class="mt-5 px-3" id="coeur">
         <p>Coup de coeur de la semaine</p>
         <hr>
         <div class="text-center">
@@ -269,7 +270,7 @@
   <!-- Footer -->
 
   <footer>
-    <div class="container-fluid">
+    <div class="container-fluid pt-3">
       <div class="row justify-content-between">
         <div class="col-xs-12 col-sm-3">
           <nav class="nav d-flex flex-column">
