ajout du padding top sur le footer

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
         </section>
     </div>
     <footer>
-        <div class="container-fluid">
+        <div class="container-fluid pt-3">
             <div class="row justify-content-between">
                 <div class="col-xs-12 col-sm-3">
                     <nav class="nav d-flex flex-column">
