--- a/article.html
+++ b/article.html
@@ -246,7 +246,7 @@
     <!-- Footer -->
 
     <footer>
-      <div class="container-fluid">
+      <div class="container-fluid pt-3">
         <div class="row justify-content-between">
           <div class="col-xs-12 col-sm-3">
             <nav class="nav d-flex flex-column">
