modification couleur typo article + couleur footer

--- a/article.html
+++ b/article.html
@@ -78,8 +78,8 @@
             <img class="card-img-top" src="images/peter_steven_2.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title my-4">[Rétrospective] La classe américaine : histoire d'un mythe urbain</h5>
-              <p class="card-text"><small class="text-muted">par Jean-Michel Navet</small></p>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non vestibulum nisl.
+              <p class="card-text texteArticle"><small class="text-muted">par Jean-Michel Navet</small></p>
+              <p class="card-text texteArticle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non vestibulum nisl.
                 Curabitur posuere quis nisi ac vulputate. Duis dapibus turpis arcu, id sollicitudin elit porttitor et.
                 Nulla sit amet leo ac nisi efficitur egestas vitae sed velit. Vestibulum egestas, risus id sollicitudin
                 sollicitudin, lectus leo fermentum est, eu tincidunt ipsum est at purus. Ut gravida placerat erat ac
@@ -99,7 +99,7 @@
               </p>
               <img class="card-img-top" src="http://md1.libe.com/photo/585166-la-classe-americaine.jpg?modified_at=1515143152&width=960"
                 alt="Card image cap">
-              <p class="card-text mt-3">
+              <p class="card-text texteArticle mt-3">
 
                 Donec accumsan nisi ac nisi rutrum, sit amet vestibulum nunc feugiat. Mauris pellentesque odio purus,
                 nec accumsan dui congue eget. Etiam feugiat, quam in fermentum feugiat, elit dui aliquam lacus, blandit
@@ -115,7 +115,7 @@
                 non id enim. Quisque quis sagittis leo. Sed laoreet egestas lacus, id imperdiet quam ultrices et.
 
               </p>
-              <p class="card-text">
+              <p class="card-text texteArticle">
 
                 Cras dignissim malesuada magna. Vivamus dapibus, massa suscipit rutrum dapibus, erat felis consectetur
                 ex, sit amet facilisis leo massa eu odio. In vel justo orci. Duis fermentum quam ut orci bibendum, in
@@ -128,7 +128,7 @@
                 ipsum.
 
               </p>
-              <p class="card-text">
+              <p class="card-text texteArticle">
                 Quisque et risus fringilla, tristique nibh sit amet, imperdiet risus. Aliquam id elit id neque
                 tristique consequat. Curabitur volutpat orci sit amet quam congue, at tempor sapien lacinia. Sed a
                 ipsum eget velit aliquet placerat in et massa. Cras eget consequat arcu, a dictum nibh. Aliquam sapien
@@ -246,7 +246,7 @@
     <!-- Footer -->
 
     <footer>
-      <div class="container-fluid pt-3">
+      <div class="container-fluid pt-3 bg-dark">
         <div class="row justify-content-between">
           <div class="col-xs-12 col-sm-3">
             <nav class="nav d-flex flex-column">
