--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   <!-- Footer -->
 
   <footer>
-    <div class="container-fluid pt-3">
+    <div class="container-fluid pt-3 bg-dark">
       <div class="row justify-content-between">
         <div class="col-xs-12 col-sm-3">
           <nav class="nav d-flex flex-column">
