ajout lien + modif navbar + correction mineures

--- a/contact.html
+++ b/contact.html
@@ -14,92 +14,90 @@
 </head>
 
 <body class="bg-white">
-        <header class="container-expand-lg">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="container-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand pl-4" href="#"><img src="images/wild-review.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active px-4">
-                  <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown px-4">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Critiques
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
-                    <a class="dropdown-item" href="#">Films</a>
-                    <a class="dropdown-item" href="#">Séries</a>
-                    <a class="dropdown-item" href="#">Dessins animés</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown px-4">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Dossiers
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
-                    <a class="dropdown-item" href="#">Interviews</a>
-                    <a class="dropdown-item" href="#">Retrospectives</a>
-                    <a class="dropdown-item" href="#">Dessins animés</a>
-                  </div>
-                </li>
-                <li class="nav-item px-4">
-                  <a class="nav-link" href="#">A propos</a>
-                </li>
-                <li class="nav-item px-4">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <div class="input-group pr-4">
-                  <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
-                  </div>
-                </div>
-              </form>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active px-4">
+                        <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown px-4">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Critiques
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
+                            <a class="dropdown-item" href="article.html">Films</a>
+                            <a class="dropdown-item" href="article.html">Séries</a>
+                            <a class="dropdown-item" href="article.html">Dessins animés</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown px-4">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Dossiers
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
+                            <a class="dropdown-item" href="article.html">Interviews</a>
+                            <a class="dropdown-item" href="article.html">Retrospectives</a>
+                            <a class="dropdown-item" href="article.html">Dessins animés</a>
+                        </div>
+                    </li>
+                    <li class="nav-item px-4">
+                        <a class="nav-link" href="#">A propos</a>
+                    </li>
+                    <li class="nav-item px-4">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <div class="input-group pr-4">
+                        <input type="search" class="form-control" placeholder="Search" aria-label="Search"
+                            aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </nav>
+        </nav>
     </header>
-    <div class="container-fluid bg-light">
-        <section id="contact">
-            <div class="row w-75 mx-auto py-5">
-                <div class="col-lg-12">
-                    <h2>Contact</h2>
-                </div>
-                <div class=" col-xs-12 col-lg-8 p-4">
-                    <h3 class="h-25">Nous contacter</h3>
-                    <p>Si vous souhaitez nous contacter, soumettre vos suggestions ou devenir contributeurs</p>
-                    <form>
-                        <div class="form-group mt-2">
-                            <input type="email" class="form-control  my-4" id="mail" aria-describedby="emailHelp"
-                                placeholder="Your name">
-                            <input type="text" class="form-control my-4" id="address" aria-describedby="emailHelp"
-                                placeholder="Your email">
-                            <textarea class="form-control my-4" id="message" placeholder="Your message"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary ">Submit</button>
-                    </form>
-                </div>
-                <div class="col-xs-12 col-lg-4 p-4">
-                    <h3 class="h-25">S'abonner à la newsletter</h3>
-                    <p>Pour être informé(e) des dernières publications</p>
-                    <form>
-                        <div class="form-group mt-2">
-                            <input type="text" class="form-control  my-4" id="mail" aria-describedby="emailHelp"
-                                placeholder="Your email">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
+    <section id="contact" class="container-fluid bg-light">
+        <div class="row w-75 mx-auto py-4">
+            <div class="col-lg-12">
+                <h2>Contact</h2>
             </div>
-        </section>
-    </div>
+            <div class="col-xs-12 col-lg-8 py-4">
+                <h3 class="h-25">Nous contacter</h3>
+                <p>Si vous souhaitez nous contacter, soumettre vos suggestions ou devenir contributeurs</p>
+                <form class="my-4">
+                    <div class="form-group my-2">
+                        <input type="email" class="form-control  my-4" id="mail" aria-describedby="emailHelp"
+                            placeholder="Your name">
+                        <input type="text" class="form-control my-4" id="address" aria-describedby="emailHelp"
+                            placeholder="Your email">
+                        <textarea class="form-control my-4" id="message" placeholder="Your message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="col-xs-12 col-lg-4 py-4">
+                <h3 class="h-25">S'abonner à la newsletter</h3>
+                <p>Pour être informé(e) des dernières publications</p>
+                <form>
+                    <div class="form-group ">
+                        <input type="text" class="form-control my-4" id="mail" aria-describedby="emailHelp" placeholder="Your email">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="container-fluid pt-3 bg-dark">
             <div class="row justify-content-between">
