--- a/article.html
+++ b/article.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active px-4">
-            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown px-4">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
@@ -36,9 +36,9 @@
               Critiques
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
-              <a class="dropdown-item" href="#">Films</a>
-              <a class="dropdown-item" href="#">Séries</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
+              <a class="dropdown-item" href="article.html">Films</a>
+              <a class="dropdown-item" href="article.html">Séries</a>
+              <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
           <li class="nav-item dropdown px-4">
@@ -47,16 +47,16 @@
               Dossiers
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
-              <a class="dropdown-item" href="#">Interviews</a>
-              <a class="dropdown-item" href="#">Retrospectives</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
+              <a class="dropdown-item" href="article.html">Interviews</a>
+              <a class="dropdown-item" href="article.html">Retrospectives</a>
+              <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="#">A propos</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -79,7 +79,8 @@
             <div class="card-body">
               <h5 class="card-title my-4">[Rétrospective] La classe américaine : histoire d'un mythe urbain</h5>
               <p class="card-text texteArticle"><small class="text-muted">par Jean-Michel Navet</small></p>
-              <p class="card-text texteArticle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non vestibulum nisl.
+              <p class="card-text texteArticle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non
+                vestibulum nisl.
                 Curabitur posuere quis nisi ac vulputate. Duis dapibus turpis arcu, id sollicitudin elit porttitor et.
                 Nulla sit amet leo ac nisi efficitur egestas vitae sed velit. Vestibulum egestas, risus id sollicitudin
                 sollicitudin, lectus leo fermentum est, eu tincidunt ipsum est at purus. Ut gravida placerat erat ac
@@ -193,102 +194,102 @@
           </div>
         </div>
       </aside>
-      </section>
-
-      <!-- Aside-->
-
-      <aside class="d-none d-sm-none d-md-block bg-secondary">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 text-center mx-4 mt-4">
-              <p class="col-xs-12 text-left">A propos de l'auteur</p>
-              <hr />
-              <img alt="text" class="rounded-circle img-fluid text-center" src="http://via.placeholder.com/130x130">
-              <p class="mt-3 titreArticle">Michel Vaillant</p>
-              <small class="mt-3">Rédacteur en chef</small>
-              <p class="presentationAuteur text-justify mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Nunc maximus, nulla ut commodo sagittis,
-                sapien dui mattis dui, non pulvinar lorem felis nec erat</p>
-            </div>
-            <div class="d-none d-sm-block mx-4 mt-4">
-              <p>Du même auteur</p>
-              <hr />
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Dossier] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Interview] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-            </div>
-            <div class="d-none d-sm-block mx-4 mt-4">
-              <p>Articles similaires</p>
-              <hr />
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Dossier] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Interview] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-              <p class="titreArticle">[Critique] Titre de l'article</p>
-              <small>Publié le 22/04/2018</small>
-            </div>
-          </div>
-        </div>
-      </aside>
     </section>
 
-    <!-- Footer -->
+    <!-- Aside-->
 
-    <footer>
-      <div class="container-fluid pt-3 bg-dark">
-        <div class="row justify-content-between">
-          <div class="col-xs-12 col-sm-3">
-            <nav class="nav d-flex flex-column">
-              <a class="nav-link" href="#">Contact</a>
-              <a class="nav-link" href="#">A propos</a>
-              <a class="nav-link" href="#">Mentions légales</a>
-            </nav>
+    <aside class="d-none d-sm-none d-md-block bg-secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 text-center mx-4 mt-4">
+            <p class="col-xs-12 text-left">A propos de l'auteur</p>
+            <hr />
+            <img alt="text" class="rounded-circle img-fluid text-center" src="http://via.placeholder.com/130x130">
+            <p class="mt-3 titreArticle">Michel Vaillant</p>
+            <small class="mt-3">Rédacteur en chef</small>
+            <p class="presentationAuteur text-justify mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Nunc maximus, nulla ut commodo sagittis,
+              sapien dui mattis dui, non pulvinar lorem felis nec erat</p>
           </div>
-          <div class="col-xs-12 col-sm-6 text-center">
-            <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
-            <div>
-              <nav class="d-flex flex-row justify-content-center mt-1">
-                <a class="nav-link"><img alt="" class="img-fluid" src="images/facebook.png"></a>
-                <a class="nav-link"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-                <a class="nav-link"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-                <a class="nav-link"><img alt="" class="img-fluid" src="images/youtube.png"></a>
-              </nav>
-            </div>
-            <div>
-              <p class="d-flex justify-content-center mt-1">© All Rights Reserved</p>
-            </div>
+          <div class="d-none d-sm-block mx-4 mt-4">
+            <p>Du même auteur</p>
+            <hr />
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
           </div>
-          <div class="d-none d-sm-block col-sm-3">
-            <nav class="nav d-flex flex-column">
-              <a class="nav-link" href="#">Les Inrocks</a>
-              <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
-              <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
-              <a class="nav-link" href="#">Cinémas UGC</a>
-            </nav>
+          <div class="d-none d-sm-block mx-4 mt-4">
+            <p>Articles similaires</p>
+            <hr />
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <small>Publié le 22/04/2018</small>
           </div>
         </div>
       </div>
-    </footer>
+    </aside>
+  </section>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
+  <!-- Footer -->
+
+  <footer>
+    <div class="container-fluid pt-3 bg-dark">
+      <div class="row justify-content-between">
+        <div class="col-xs-12 col-sm-3">
+          <nav class="nav d-flex flex-column">
+            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">A propos</a>
+            <a class="nav-link" href="#">Mentions légales</a>
+          </nav>
+        </div>
+        <div class="col-xs-12 col-sm-6 text-center">
+          <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
+          <div>
+            <nav class="d-flex flex-row justify-content-center mt-1">
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/facebook.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/twitter.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
+              <a class="nav-link"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+            </nav>
+          </div>
+          <div>
+            <p class="d-flex justify-content-center mt-1">© All Rights Reserved</p>
+          </div>
+        </div>
+        <div class="d-none d-sm-block col-sm-3">
+          <nav class="nav d-flex flex-column">
+            <a class="nav-link" href="#">Les Inrocks</a>
+            <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
+            <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
+            <a class="nav-link" href="#">Cinémas UGC</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
