--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <title>Wild Review</title>
 
 </head>
-<!--TODO: Supprimer le débordement de marge -->
 
 <body class="bg-white">
   <header class="container-expand-lg">
@@ -30,7 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active px-4">
-            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown px-4">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
@@ -38,9 +37,9 @@
               Critiques
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
-              <a class="dropdown-item" href="#">Films</a>
-              <a class="dropdown-item" href="#">Séries</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
+              <a class="dropdown-item" href="article.html">Films</a>
+              <a class="dropdown-item" href="article.html">Séries</a>
+              <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
           <li class="nav-item dropdown px-4">
@@ -49,16 +48,16 @@
               Dossiers
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
-              <a class="dropdown-item" href="#">Interviews</a>
-              <a class="dropdown-item" href="#">Retrospectives</a>
-              <a class="dropdown-item" href="#">Dessins animés</a>
+              <a class="dropdown-item" href="article.html">Interviews</a>
+              <a class="dropdown-item" href="article.html">Retrospectives</a>
+              <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="#">A propos</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -81,13 +80,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="First slide">
+          <img class="d-block img-fluid w-100" src="images/au_poste-banner.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Second slide">
+          <img class="d-block img-fluid w-100" src="images/peakyblinders2.jpg" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://via.placeholder.com/900x200" alt="Third slide">
+          <img class="d-block img-fluid w-100" src="images/chihiro2-banner.jpg" alt="Second slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -226,12 +225,12 @@
 
     <aside class="d-none d-sm-block bg-secondary">
       <div id="newsletter" class="pb-3 bg-dark">
-      <div class="social d-flex justify-content-between">
-        <img class="img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
-      </div>
+        <div class="social d-flex justify-content-between">
+          <img class="img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
+        </div>
         <div class="card form-group mx-3">
           <div class="card-header headerNews">
             Abonnez-vous à notre newsletter
