modification footer + page article

--- a/contact.html
+++ b/contact.html
@@ -14,57 +14,58 @@
 </head>
 
 <body class="bg-white">
-        <header class="container-expand-lg">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="container-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand pl-4" href="#"><img src="images/wild-review.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active px-4">
-                  <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown px-4">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Critiques
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
-                    <a class="dropdown-item" href="#">Films</a>
-                    <a class="dropdown-item" href="#">Séries</a>
-                    <a class="dropdown-item" href="#">Dessins animés</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown px-4">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Dossiers
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
-                    <a class="dropdown-item" href="#">Interviews</a>
-                    <a class="dropdown-item" href="#">Retrospectives</a>
-                    <a class="dropdown-item" href="#">Dessins animés</a>
-                  </div>
-                </li>
-                <li class="nav-item px-4">
-                  <a class="nav-link" href="#">A propos</a>
-                </li>
-                <li class="nav-item px-4">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <div class="input-group pr-4">
-                  <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
-                  </div>
-                </div>
-              </form>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active px-4">
+                        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown px-4">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Critiques
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownCritiques">
+                            <a class="dropdown-item" href="#">Films</a>
+                            <a class="dropdown-item" href="#">Séries</a>
+                            <a class="dropdown-item" href="#">Dessins animés</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown px-4">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Dossiers
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownDossiers">
+                            <a class="dropdown-item" href="#">Interviews</a>
+                            <a class="dropdown-item" href="#">Retrospectives</a>
+                            <a class="dropdown-item" href="#">Dessins animés</a>
+                        </div>
+                    </li>
+                    <li class="nav-item px-4">
+                        <a class="nav-link" href="#">A propos</a>
+                    </li>
+                    <li class="nav-item px-4">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <div class="input-group pr-4">
+                        <input type="search" class="form-control" placeholder="Search" aria-label="Search"
+                            aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </nav>
+        </nav>
     </header>
     <div class="container-fluid bg-light">
         <section id="contact">
@@ -100,37 +101,38 @@
             </div>
         </section>
     </div>
+
+    <!-- Footer -->
     <footer>
         <div class="container-fluid pt-3 bg-dark">
             <div class="row justify-content-between">
-                <div class="col-xs-12 col-sm-3">
-                    <nav class="nav d-flex flex-column">
+                <div class="col-xs-12 col-sm-3 mt-2">
+                    <nav class="nav d-flex flex-column menu-footer">
                         <a class="nav-link" href="#">Contact</a>
-                        <a class="nav-link" href="#">A propos</a>
+                        <a class="nav-link" href="#">À propos</a>
                         <a class="nav-link" href="#">Mentions légales</a>
                     </nav>
                 </div>
-                <div class="col-xs-12 col-sm-6 text-center">
+                <div class="col-xs-12 col-sm-6 text-center mt-2">
                     <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
                     <div>
                         <nav class="d-flex flex-row justify-content-center mt-1">
-                            <a class="nav-link"><img alt="" class="img-fluid" src="images/facebook.png"></a>
-                            <a class="nav-link"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-                            <a class="nav-link"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-                            <a class="nav-link"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+                            <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"></a>
+                            <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
+                            <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
+                            <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
                         </nav>
                     </div>
                     <div>
-                        <p class="d-flex justify-content-center mt-1">© All Rights Reserved</p>
+                        <p class="d-flex justify-content-center mt-2 rights">© All Rights Reserved</p>
                     </div>
                 </div>
                 <div class="d-none d-sm-block col-sm-3">
-                    <nav class="nav d-flex flex-column">
-                        <a class="nav-link" href="#">Les Inrocks</a>
-                        <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
-                        <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
-                        <a class="nav-link" href="#">Cinémas UGC</a>
-                    </nav>
+                    <p class="partenaires">Nos partenaires :</p>
+                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png">
+                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png">
+                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png">
+                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png">
                 </div>
             </div>
         </div>
