--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
 
     <aside class="d-none d-sm-block bg-secondary">
       <div id="newsletter" class="pb-3 bg-dark">
-      <div class="social d-flex justify-content-between">
-        <img class="img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
-        <img class="img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
-      </div>
+        <div class="social d-flex justify-content-between">
+          <img class="img-responsive mx-auto my-5" src="images/facebook.png" alt="facebook" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/twitter.png" alt="twitter" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/Instagram.png" alt="insta" height=auto width="20%">
+          <img class="img-responsive mx-auto my-5" src="images/youtube.png" alt="youtube" height=auto width="20%">
+        </div>
         <div class="card form-group mx-3">
           <div class="card-header headerNews">
             Abonnez-vous à notre newsletter
@@ -268,34 +268,33 @@
   <footer>
     <div class="container-fluid pt-3 bg-dark">
       <div class="row justify-content-between">
-        <div class="col-xs-12 col-sm-3">
-          <nav class="nav d-flex flex-column">
+        <div class="col-xs-12 col-sm-3 mt-2">
+          <nav class="nav d-flex flex-column menu-footer">
             <a class="nav-link" href="#">Contact</a>
-            <a class="nav-link" href="#">A propos</a>
+            <a class="nav-link" href="#">À propos</a>
             <a class="nav-link" href="#">Mentions légales</a>
           </nav>
         </div>
-        <div class="col-xs-12 col-sm-6 text-center">
+        <div class="col-xs-12 col-sm-6 text-center mt-2">
           <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
           <div>
             <nav class="d-flex flex-row justify-content-center mt-1">
-              <a class="nav-link"><img alt="" class="img-fluid" src="images/facebook.png"></a>
-              <a class="nav-link"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-              <a class="nav-link"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-              <a class="nav-link"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+              <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"></a>
+              <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
+              <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
+              <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
             </nav>
           </div>
           <div>
-            <p class="d-flex justify-content-center mt-1">© All Rights Reserved</p>
+            <p class="d-flex justify-content-center mt-2 rights">© All Rights Reserved</p>
           </div>
         </div>
         <div class="d-none d-sm-block col-sm-3">
-          <nav class="nav d-flex flex-column">
-            <a class="nav-link" href="#">Les Inrocks</a>
-            <a class="nav-link" href="#">Les Cahiers du Cinéma</a>
-            <a class="nav-link" href="#">Cinémas Gaumont-Pathé</a>
-            <a class="nav-link" href="#">Cinémas UGC</a>
-          </nav>
+          <p class="partenaires">Nos partenaires :</p>
+          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png">
+          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png">
+          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png">
+          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png">
         </div>
       </div>
     </div>
