Commit Nelson partie fil actu et comment article

--- a/article.html
+++ b/article.html
@@ -195,6 +195,26 @@
               <div class="d-flex justify-content-end">
                 <button type="button" class="btn boutons-commentaires mb-3 mr-3">Répondre</button>
               </div>
+
+              <!--Block on click
+
+                <div class="d-flex justify-content-end">
+                  <button id="supprBtnAddComment" type="button" class="btn boutons-commentaires mb-3 mr-3">Répondre</button>
+                </div>
+
+                <div class="d-none" id="addComment">
+                  ---------content--------- + btn send
+                </div
+
+                <script>
+                  function showArticle() {
+                    document.getElementById('addComment').style.display = "block";
+                    document.getElementById('supprBtnAddComment').style.display = "none";
+                  }
+                </script>
+              
+              -->
+
             </div>
           </div>
         </div>
@@ -278,7 +298,7 @@
           <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
           <div>
             <nav class="d-flex flex-row justify-content-center mt-1">
-              <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"></a>
+              <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png" width="150%"></a>
               <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
               <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
               <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
