modif card deck

--- a/article.html
+++ b/article.html
@@ -21,7 +21,7 @@
 <body class="bg-white">
   <header class="container-expand-lg">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand pl-4" href="#"><img src="images/wild-review.png"></a>
+      <a class="navbar-brand pl-xs-0 pl-md-4" href="#"><img src="images/wild-review.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
