Commit avant push Nelson

--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@
       <div id="newsletter">
         <div>
           <nav class="d-flex flex-row justify-content-center my-3 mt-5">
-            <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid linkAsideSocial" src="images/facebook.png"></a>
-            <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid linkAsideSocial" src="images/twitter.png"></a>
-            <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid linkAsideSocial" src="images/Instagram.png"></a>
-            <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid linkAsideSocial" src="images/youtube.png"></a>
+            <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid linkAsideSocial socialFacebook" src="images/facebook.png"></a>
+            <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid linkAsideSocial socialTwitter" src="images/twitter.png"></a>
+            <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid linkAsideSocial socialInstagram" src="images/Instagram.png"></a>
+            <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid linkAsideSocial socialYoutube" src="images/youtube.png"></a>
           </nav>
         </div>
         <div class="card form-group mx-3 mt-5">
@@ -640,10 +640,10 @@
           <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
           <div>
             <nav class="d-flex flex-row justify-content-center mt-1">
-              <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"></a>
-              <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-              <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-              <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+              <a class="nav-link" href="https://facebook.com"><img alt="" id ="imageFacebook" class="img-fluid socialFacebook" src="images/facebook.png" onmouseover="changeImgHover()"></a>
+              <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid socialTwitter" src="images/twitter.png"></a>
+              <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid socialInstagram" src="images/Instagram.png"></a>
+              <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid socialYoutube" src="images/youtube.png"></a>
             </nav>
           </div>
           <div>
@@ -692,8 +692,6 @@
       document.getElementById('supprBtn2').style.display = "none";
     }
   </script>
-
-
 </body>
 
 </html>
