--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-fill">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active px-4">
                         <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
                     </li>
@@ -59,16 +59,16 @@
                     <li class="nav-item px-4">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                    <form class="form-inline my-2 my-lg-0">
-                        <div class="input-group pr-4">
-                            <input type="search" class="form-control" placeholder="Search" aria-label="Search"
-                                aria-describedby="button-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
-                            </div>
-                        </div>
-                    </form>
                 </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <div class="input-group pr-4">
+                        <input type="search" class="form-control" placeholder="Search" aria-label="Search"
+                            aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary my-sm-0" type="submit" id="button-addon2"><img src="images/magnify-white.png"></button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </nav>
     </header>
